<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/limpiarBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="limpiarBTN"
                android:text="@string/limpiar"
                android:theme="@style/Widget.AppCompat.Button.Borderless"
                android:backgroundTint="#F44336"/>

            <Button
                android:id="@+id/parentesisBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="parentesisBTN"
                android:text="@string/parentesis"
                android:theme="@style/Widget.AppCompat.Button.Borderless" />

            <Button
                android:id="@+id/exponenteBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"

                android:onClick="exponenteBTN"

                android:text="@string/exponente"
                android:theme="@style/Widget.AppCompat.Button.Borderless" />

            <Button
                android:id="@+id/divisionBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="divisionBTN"
                android:text="@string/division"
                android:theme="@style/Widget.AppCompat.Button.Borderless" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sieteBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="sieteBTN"
                android:text="@string/siete"
                android:theme="@style/Widget.AppCompat.Button.Borderless" />

            <Button
                android:id="@+id/ochoBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="ochoBTN"
                android:text="@string/ocho"
                android:theme="@style/Widget.AppCompat.Button.Borderless" />

            <Button
                android:id="@+id/nueveBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="nueveBTN"
                android:text="@string/nueve"
                android:theme="@style/Widget.AppCompat.Button.Borderless" />

            <Button
                android:id="@+id/multiplicacionBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="multiplicacionBTN"
                android:text="@string/multiplicacion"
                android:theme="@style/Widget.AppCompat.Button.Borderless" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/cuatroBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="cuatroBTN"
                android:text="@string/cuatro"
                android:theme="@style/Widget.AppCompat.Button.Borderless" />

            <Button
                android:id="@+id/cincoBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="cincoBTN"
                android:text="@string/cinco"
                android:theme="@style/Widget.AppCompat.Button.Borderless" />

            <Button
                android:id="@+id/seisBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="seisBTN"
                android:text="@string/seis"
                android:theme="@style/Widget.AppCompat.Button.Borderless" />

            <Button
                android:id="@+id/restaBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="restaBTN"
                android:text="@string/resta"
                android:theme="@style/Widget.AppCompat.Button.Borderless" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/unoBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="unoBTN"
                android:text="@string/uno"
                android:theme="@style/Widget.AppCompat.Button.Borderless" />

            <Button
                android:id="@+id/dosBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="dosBTN"
                android:text="@string/dos"
                android:theme="@style/Widget.AppCompat.Button.Borderless" />

            <Button
                android:id="@+id/tresBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="tresBTN"
                android:text="@string/tres"
                android:theme="@style/Widget.AppCompat.Button.Borderless" />

            <Button
                android:id="@+id/sumaBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="sumaBTN"
                android:text="@string/suma"
                android:theme="@style/Widget.AppCompat.Button.Borderless" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/plusMinusBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="plusMinusBTN"
                android:text="@string/plusMinus"
                android:theme="@style/Widget.AppCompat.Button.Borderless" />

            <Button
                android:id="@+id/ceroBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="zeroBTN"
                android:text="@string/cero"
                android:theme="@style/Widget.AppCompat.Button.Borderless" />

            <Button
                android:id="@+id/puntoBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="puntoBTN"
                android:text="@string/punto"
                android:theme="@style/Widget.AppCompat.Button.Borderless" />

            <Button
                android:id="@+id/igualBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="igualBTN"
                android:text="@string/igual"
                android:theme="@style/Widget.AppCompat.Button.Borderless"
                android:backgroundTint="#4CAF50"/>
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:autofillHints="false"
        android:inputType="none"
        android:text="Ingrese un valor"
        android:textAlignment="textEnd"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101"
        app:layout_goneMarginTop="30dp"
        tools:ignore="LabelFor" />

    <ImageButton
        android:id="@+id/espacioBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#FFC107"
        android:onClick="borrarBTN"
        android:theme="@style/Widget.AppCompat.Button.Borderless"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/backspace" />
</android.support.constraint.ConstraintLayout>